Tests/pass/functionDeclarationArgumentSpacing.php
<?php
// Functions (regardless of scope) should be declared using the following format:

class Foo
{
	public static function foo( $bar = '' )
	{
		$a = true;
	}
}

// The opening and closing braces should be on their own line.
// Note that [public|private|protected] should always come first in the function declaration (if declaring a class method). The static declaration is secondary.
?>